--- a/ASP_Event_Project/Views/Event/Index.cshtml
+++ b/ASP_Event_Project/Views/Event/Index.cshtml
@@ -31,7 +31,7 @@
                     <td>@events.Price</td>
                     <td>
                         <a class="btn btn-primary" asp-controller="Event" asp-action="EditEvent" asp-route-id="@events.EventId">Edytuj</a>
-                        <a class="btn btn-secondary" asp-controller="Event" asp-action="EventDetails" asp-route-id="@events.EventId">Szczegóły</a>
+                        <a class="btn btn-secondary" asp-controller="Event" asp-action="Details" asp-route-id="@events.EventId">Szczegóły</a>
                         <a class="btn btn-danger" asp-controller="Event" asp-action="DeleteEvent" asp-route-id="@events.EventId">Usuń</a>
                     </td>
                 </tr>
