--- a/ASP_Event_Project/Views/Account/Login.cshtml
+++ b/ASP_Event_Project/Views/Account/Login.cshtml
@@ -20,6 +20,9 @@
                 <input class="form-control" asp-for="Password" />
             </div>
             <div class="col col-lg-3">
+                <a class="text-info" asp-controller="Event" asp-action="Index">Chcesz tylko zobaczyć wydarzenia w okolicy?</a>
+            </div>
+            <div class="col col-lg-3">
                 <button class="btn btn-primary" type="submit">Login</button>
             </div>
         </form>
