--- a/ASP_Event_Project/Views/EventManagment/Details.cshtml
+++ b/ASP_Event_Project/Views/EventManagment/Details.cshtml
@@ -67,6 +67,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edytujt", "EditEvent", new {  id = Model.EventId }) |
+    @Html.ActionLink("Edytuj", "EditEvent", new {  id = Model.EventId }) |
     <a asp-action="Index">Back to List</a>
 </div>
