--- a/ASP_Event_Project/Views/Shared/_Layout.cshtml
+++ b/ASP_Event_Project/Views/Shared/_Layout.cshtml
@@ -22,8 +22,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="Index">Wydarzenia</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EventManagment" asp-action="Index">Wydarzenia</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Account" asp-action="Login">Zaloguj się</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark " asp-area="" asp-controller="Account" asp-action="Logout">Wyloguj się</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
