--- a/ASP_Event_Project/Views/EventManagment/Details.cshtml
+++ b/ASP_Event_Project/Views/EventManagment/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Szczegóły wydarzenia</h1>
 
 <div>
-    <h4>EventModel</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -67,6 +67,5 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edytuj", "EditEvent", new {  id = Model.EventId }) |
     <a asp-action="Index">Back to List</a>
 </div>
