--- a/ASP_Event_Project/Views/EventManagment/DeleteEvent.cshtml
+++ b/ASP_Event_Project/Views/EventManagment/DeleteEvent.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "DeleteEvent";
 }
 
-<h1>DeleteEvent</h1>
+<h1>Usuń wydarzenie</h1>
 
 <h3>Czy na pewno chcesz usunąć to wydarzenie</h3>
 <div>
