--- a/ASP_Event_Project/Views/EventManagment/AddEvent.cshtml
+++ b/ASP_Event_Project/Views/EventManagment/AddEvent.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "AddEvent";
 }
 
-<h1>AddEvent</h1>
+<h1>Dodaj wydarzenie</h1>
 
-<h4>EventModel</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -61,7 +61,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Wróć do listy wydarzeń</a>
 </div>
 
 @section Scripts {
