--- a/ASP_Event_Project/Views/EventManagment/Details.cshtml
+++ b/ASP_Event_Project/Views/EventManagment/Details.cshtml
@@ -67,5 +67,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Wróć do listy wydarzeń</a>
 </div>
