--- a/ASP_Event_Project/Views/EventManagment/EditEvent.cshtml
+++ b/ASP_Event_Project/Views/EventManagment/EditEvent.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "EditEvent";
 }
 
-<h1>EditEvent</h1>
+<h1>Edytuj Wydarzenie</h1>
 
-<h4>EventModel</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -58,14 +58,14 @@
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Zapisz" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Wróć do listy wydarzeń</a>
 </div>
 
 @section Scripts {
